Changelog
=========

7.4-dev0 - (unreleased)
---------------------
* Change: updated URLs pointing to eea.europa.eu with https://
  [alecghica refs #95849]
* Change: fixed the usage of BeautifulSoup
  [alecghica refs #96974]

7.3 - (2018-05-25)
-----------------------
* Bug fix: Speed-up cache invalidation for backward-references
  [avoinea refs #95020]

7.2 - (2018-04-24)
-----------------------
 * Change: Make zc.async logs less verbose about ePub downloads
   [avoinea]

7.1 - (2017-12-12)
------------------
* Change: Replace eeacms/zptlint with eeacms/plone-test:4 zptlint
  [avoinea refs #90415]

7.0 - (2017-11-07)
------------------
* Change: Remove Sphinx generated documentation
  [petchesi-iulian refs #88212]

6.9 - (2017-05-22)
------------------
* Change: Run async ePub jobs in parallel
  [avoinea refs #84915]
* Change: fixed PyLint warnings and errors
  [valipod refs #84949]

6.8 - (2017-05-15)
------------------
* Change: fixed PyLint warnings and errors
  [eduard-fironda refs #84949]

6.7 - (2017-04-24)
------------------
* Change: updated package information
  [eduard-fironda]

6.6 - (2016-10-03)
------------------
* Change: Updated to use plone.stringinterp IContextWrapper adapter
  [avoinea]

6.5 - (2016-05-19)
------------------
* Bug fix: Fix pylint warnings
  [chiridra refs #71940]

6.4 - (2016-05-04)
------------------
* Update eea.translations with the latest translation strings -
  fixed errors in templates
  [chiridra refs #69753]

6.3 - (2015-08-18)
------------------
* Change: Auto-include zcml within plone context in order to make this package
  work without having to add it within buildout zcml directive.
  [avoinea]

6.2 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins build install script to the install
  script from the main EEA CPB repository
  [olimpiurob refs #22402]