@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<object name="portal_actions">
+ <object name="document_actions">
+  <object name="download_as_epub" remove="True" />
+ </object>
+ <object name="export_actions">
+  <object name="download_as_epub" remove="True" />
+ </object>
+</object>
