@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<object name="portal_javascripts">
+ <javascript id="++resource++eea.epub.js" remove="True" />
+</object>
