@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<object name="portal_properties">
+ <object name="site_properties">
+   <property name="clean_epub_file_names" type="boolean" remove="True" />
+ </object>
+</object>
