@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<rolemap>
+  <permissions>
+    <permission name="Can customize ePub" acquire="True" />
+    <permission name="Can download ePub" acquire="True" />
+  </permissions>
+</rolemap>
