@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<object name="portal_skins">
+ <object name="eea_epub" remove="True" />
+ <skin-path name="*">
+  <layer name="eea_epub" remove="True" />
+ </skin-path>
+</object>
