@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<object name="portal_types">
+ <object name="EpubFile" remove="True" />
+</object>
